test/typechecker.d/invalid/main0.surc.bad
main(stdout: OutputStream): IO = do
	var x <- 4
	writey  "whoa" , stdout
